update CORS configuration and revert to stable Spring Boot version - Updated `SecurityConfig.java` and `WebConfig.java` to allow all origins (*) and the OPTIONS method, ensuring mobile devices can connect. - Reverted Spring Boot version from 4.0.5 to 3.4.1 in `pom.xml` to fix "Not a managed type" entity errors.